--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,27 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Hongkwamkit
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <div class="showhead">
+    <img src="assets/imgs/stitch1.png">
+    <p>Welcome to Hongkwamkit</p>
+  </div>
+  <ion-list>
+  <ion-item (click)=gotoAbout()>
+    <ion-icon name="arrow-dropright-circle"></ion-icon>หน้าแรก
+  </ion-item>
+
+  <ion-item>
+    <ion-icon name="arrow-dropright-circle"></ion-icon>ติดต่อ
+  </ion-item>
+
+  <ion-item>
+    <ion-icon name="arrow-dropright-circle"></ion-icon>เกี่ยวกับ
+  </ion-item>
+  </ion-list>
 </ion-content>
