--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,15 +13,15 @@
   </div>
   <ion-list>
   <ion-item (click)=gotoAbout()>
-    <ion-icon name="arrow-dropright-circle"></ion-icon>หน้าแรก
+    <ion-icon name="arrow-dropright-circle"></ion-icon>  About Us
   </ion-item>
 
-  <ion-item>
-    <ion-icon name="arrow-dropright-circle"></ion-icon>ติดต่อ
+  <ion-item (click)=gotoNewClass()>
+    <ion-icon name="arrow-dropright"></ion-icon>  NewClass
   </ion-item>
 
-  <ion-item>
-    <ion-icon name="arrow-dropright-circle"></ion-icon>เกี่ยวกับ
+  <ion-item (click)=gotoAddMember()>
+    <ion-icon name="arrow-forward"></ion-icon>  AddMember
   </ion-item>
   </ion-list>
 </ion-content>
