--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -23,5 +23,9 @@
   <ion-item (click)=gotoAddMember()>
     <ion-icon name="arrow-forward"></ion-icon>  AddMember
   </ion-item>
+
+  <ion-item (click)=gotoSlides()>
+    <ion-icon name="arrow-forward"></ion-icon>  Gallery
+  </ion-item>
   </ion-list>
 </ion-content>
