add page home cust detail

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,15 +17,18 @@
   </ion-item>
 
   <ion-item (click)=gotoNewClass()>
-    <ion-icon name="arrow-dropright"></ion-icon>  NewClass
+    <ion-icon name="albums"></ion-icon>  NewClass
   </ion-item>
 
   <ion-item (click)=gotoAddMember()>
-    <ion-icon name="arrow-forward"></ion-icon>  AddMember
+    <ion-icon name="person-add"></ion-icon>  AddMember
   </ion-item>
 
   <ion-item (click)=gotoSlides()>
-    <ion-icon name="arrow-forward"></ion-icon>  Gallery
+    <ion-icon name="photos"></ion-icon>  Gallery
   </ion-item>
+  <ion-item (click)=gotoCustomer()>
+      <ion-icon name="body"></ion-icon>  Customer
+    </ion-item>
   </ion-list>
 </ion-content>
